After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 696785 - mpeg file missing a streamid
mpeg file missing a streamid
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
unspecified
Other Linux
: Normal normal
: 1.0.7
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-03-28 14:48 UTC by Christian Fredrik Kalager Schaller
Modified: 2013-03-30 10:17 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Christian Fredrik Kalager Schaller 2013-03-28 14:48:47 UTC
Just realized that if I run gst-discoverer on this file:
http://gstreamer.freedesktop.org/media/large/gravity.mpg

It returns nothing as a streamid.

gst-discoverer-1.0 -v ../Videos/gravity.mpg 
Analyzing file:///home/cschalle/Downloads/../Videos/gravity.mpg
Done discovering file:///home/cschalle/Downloads/../Videos/gravity.mpg

Topology:
  container: video/mpeg, systemstream=(boolean)true, mpegversion=(int)1
    audio: audio/mpeg, mpegversion=(int)1, mpegaudioversion=(int)1, layer=(int)2, rate=(int)44100, channels=(int)2, parsed=(boolean)true
      Codec:
        audio/mpeg, mpegversion=(int)1, mpegaudioversion=(int)1, layer=(int)2, rate=(int)44100, channels=(int)2, parsed=(boolean)true
      Additional info:
        None
      Stream ID: (null)
      Language: <unknown>
      Channels: 2
      Sample rate: 44100
      Depth: 32
      Bitrate: 224000
      Max bitrate: 0
      Tags:
        taglist, audio-codec=(string)"MPEG\ 1\ Audio\,\ Layer\ 2", nominal-bitrate=(uint)224000, has-crc=(boolean)false, channel-mode=(string)stereo;
      
    video: video/mpeg, mpegversion=(int)1, systemstream=(boolean)false, parsed=(boolean)false
      Codec:
        video/mpeg, mpegversion=(int)1, systemstream=(boolean)false, parsed=(boolean)false
      Additional info:
        None
      Stream ID: (null)
      Width: 0
      Height: 0
      Depth: 0
      Frame rate: 0/1
      Pixel aspect ratio: 1/1
      Interlaced: false
      Bitrate: 0
      Max bitrate: 0
      Tags:
        None
      
      video: video/mpeg, mpegversion=(int)1, systemstream=(boolean)false, parsed=(boolean)true, width=(int)352, height=(int)240, framerate=(fraction)30000/1001, pixel-aspect-ratio=(fraction)8/9, codec_data=(buffer)000001b31600f0c402cee0a4
        Codec:
          video/mpeg, mpegversion=(int)1, systemstream=(boolean)false, parsed=(boolean)true, width=(int)352, height=(int)240, framerate=(fraction)30000/1001, pixel-aspect-ratio=(fraction)8/9, codec_data=(buffer)000001b31600f0c402cee0a4
        Additional info:
          None
        Stream ID: (null)
        Width: 352
        Height: 240
        Depth: 0
        Frame rate: 30000/1001
        Pixel aspect ratio: 8/9
        Interlaced: false
        Bitrate: 0
        Max bitrate: 0
        Tags:
          taglist, video-codec=(string)"MPEG\ 1\ Video";
        

Properties:
  Duration: 0:03:58.509588888
  Seekable: yes
  Tags: 
      video codec: MPEG 1 Video
      audio codec: MPEG 1 Audio, Layer 2
      nominal bitrate: 224000
      has crc: false
      channel mode: stereo
Comment 1 Tim-Philipp Müller 2013-03-28 14:52:59 UTC
I'm going to guess this is the demuxer not sending a stream-start event..
Comment 2 Christian Fredrik Kalager Schaller 2013-03-29 17:27:54 UTC
I just got the same result when trying to load a DVD into Transmageddon
Comment 3 Wim Taymans 2013-03-30 10:17:38 UTC
commit d7bcf7206f081c5503489233733fa8d3b89f37e7
Author: Wim Taymans <wim.taymans@collabora.co.uk>
Date:   Sat Mar 30 10:25:24 2013 +0100

    mpegpsdemux: push stream start event