mpegpsdemux: push stream start event

Fixes https://bugzilla.gnome.org/show_bug.cgi?id=696785